# multi-agent-coordinator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.cfg
.claude/: settings.json  settings.local.json
.github/workflows/: publish.yml  test.yml
docs/: SPEC.md  USER_GUIDE.md
docs/research/: p3-mcp-error-structuring.md  p3-mutmut-baseline.md  p3-pypi-publishing.md  pypi-trusted-publishing-setup.md
docs/superpowers/plans/: 2026-05-21-mac-mvp.md  2026-05-21-mac-phase-1-1.md  2026-05-21-mac-phase-1-2.md  2026-05-21-mac-phase-1-3.md  2026-05-21-mac-phase-1-4.md  2026-05-21-mac-phase-1-5.md  2026-05-21-mac-phase-1-6.md  2026-05-21-mac-phase-1-7.md  2026-05-21-mac-phase-1-8.md
docs/superpowers/specs/: 2026-05-22-mac-phase-a-design.md  2026-05-22-mac-phase-a-minimal-design.md  2026-05-22-project-standards-design.md  2026-07-23-mac-phase-b-design.md  2026-07-23-mac-phase-c-design.md
examples/: collaboration_plan.py  e2e_multi_agent.py  local_handoff.py  local_runner.py  review_lifecycle.py
scripts/: release_smoke.py
src/mac/: __init__.py  cli.py  events.py  mcp_server.py  metrics.py  registry.py
src/mac/protocol/: __init__.py  constants.py  errors.py  messages.py
src/mac/quality/: __init__.py  gate.py
src/mac/runner/: __init__.py  local.py  templates.py
src/mac/storage/: __init__.py  models.py  sqlite.py
src/mac/testing/: __init__.py  contracts.py  planner.py
src/mac/transport/: __init__.py  http_ws.py
tests/: test_cleanup_tasks.py  test_cli.py  test_cli_claim.py  test_cli_lifecycle.py  test_cli_quality_preview.py  test_cli_review_lifecycle.py  test_cli_runner.py  test_cli_task_evidence.py  test_cli_task_readiness.py  test_cli_tasks.py  test_concurrency.py  test_e2e_handoff.py  test_event_bus.py  test_failure_recovery.py  test_http_claim.py  test_http_quality_preview.py  test_http_review_lifecycle.py  test_http_task_evidence.py  test_http_task_readiness.py  test_http_tasks.py  test_http_ws.py  test_local_runner.py  test_mcp_server.py  test_metrics.py  test_observed_capability.py  test_phase_a_cli.py  test_phase_a_http.py  test_phase_a_protocol.py  test_phase_a_registry.py  test_phase_a_storage.py  test_protocol.py  test_quality_gate.py  test_quality_preview.py  test_registry.py  test_registry_lifecycle.py  test_release_readiness.py  test_runner_templates.py  test_storage.py  test_task_claiming.py  test_task_evidence.py  (+4 more)
