[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac-agent"
version = "0.6.0"
description = "A lightweight multi-agent coordination ledger for task handoff, context handoff, and quality gates."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Wenbo Fan", email = "fanwenbo_best@126.com"},
]
keywords = ["ai-agents", "coordination", "task-ledger", "handoff", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/JosephIvon/multi-agent-coordinator"
Documentation = "https://github.com/JosephIvon/multi-agent-coordinator/tree/main/docs"
Repository = "https://github.com/JosephIvon/multi-agent-coordinator"
Changelog = "https://github.com/JosephIvon/multi-agent-coordinator/releases"
Issues = "https://github.com/JosephIvon/multi-agent-coordinator/issues"

[project.optional-dependencies]
http = [
  "fastapi>=0.110",
]
mcp = [
  "mcp>=1.0",
]
# Python 3.10 lacks stdlib tomllib; K-001 dual-import falls back to tomli there.
dev = [
  "build>=1.2",
  "fastapi>=0.110",
  "httpx>=0.27",
  "mcp>=1.0",
  "pytest>=8.0",
  "twine>=6.0",
  'tomli>=1.1; python_version < "3.11"',
]

[project.scripts]
mac-agent = "mac.cli:main"
mac-mcp-server = "mac.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/mac"]
