[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac-agent"
version = "0.8.0"
description = "A lightweight multi-agent coordination ledger for task handoff, context handoff, and quality gates."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Wenbo Fan", email = "fanwenbo_best@126.com"},
]
keywords = ["ai-agents", "coordination", "task-ledger", "handoff", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/JosephIvon/multi-agent-coordinator"
Documentation = "https://github.com/JosephIvon/multi-agent-coordinator/tree/main/docs"
Repository = "https://github.com/JosephIvon/multi-agent-coordinator"
Changelog = "https://github.com/JosephIvon/multi-agent-coordinator/releases"
Issues = "https://github.com/JosephIvon/multi-agent-coordinator/issues"

[project.optional-dependencies]
http = [
  "fastapi>=0.110",
]
mcp = [
  "mcp>=1.0",
]
# Python 3.10 lacks stdlib tomllib; K-001 dual-import falls back to tomli there.
dev = [
  "build>=1.2",
  "fastapi>=0.110",
  "httpx>=0.27",
  "mcp>=1.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "twine>=6.0",
  'tomli>=1.1; python_version < "3.11"',
]

[project.scripts]
mac-agent = "mac.cli:main"
mac-mcp-server = "mac.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short -q"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "SIM",    # flake8-simplify
  "I",      # isort
  "RUF100", # unused noqa
]
ignore = [
  "E501",   # line too long (argparse help strings are inherently long)
]

[tool.ruff.lint.isort]
known-first-party = ["mac"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_strict_optional = true

[[tool.mypy.overrides]]
module = [
  "mcp.*",
  "fastapi.*",
  "pydantic.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["mac"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.hatch.build.targets.wheel]
packages = ["src/mac"]
